# CozyWatch

./: .gitignore  CMakeLists.txt  CozyWatch.code-workspace  README.md
doc/: connections.md
fw/src/bsp/: CMakeLists.txt
fw/src/bsp/EKRA4M2/: .cproject  .project  .secure_azone  .secure_rzone  .secure_xml  EKRA4M2 Debug_Flat.jlink  EKRA4M2 Debug_Flat.launch  configuration.xml  ra_cfg.txt
fw/src/bsp/EKRA4M2/Debug/: bsp_linker_info.h  fsp_gen.ld
fw/src/bsp/EKRA4M2/ra_cfg/fsp_cfg/bsp/: bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_pin_cfg.h
fw/src/bsp/EKRA4M2/ra_gen/: hal_data.c  hal_data.h  pin_data.c  vector_data.c  vector_data.h
fw/src/bsp/EKRA4M2/src/: hal_entry.cpp  hal_warmstart.c  syscalls.c  syscalls.h
fw/src/prj/: AppEntry.cpp  syscalls.c  syscalls.h
tools/cmake_scripts/: cmake_host_cfg.cmake  cmake_macros.cmake  cmake_ra4m2_arm_gcc_cfg.cmake
tools/cmd_scripts/: clean_dir.sh
tools/jlink_scripts/: flash_script.jlink  read_rtt.jlink
